genere controller